--- a/ec2.yml
+++ b/ec2.yml
@@ -1,8 +1,10 @@
 AWSTemplateFormatVersion: 2010-09-09
 Resources:
   MyKeyPair:
-
-  MySecurityGroup:
+    Type: 'AWS::EC2::KeyPair'
+    Properties:
+      KeyName: "jenkins"
+  # MySecurityGroup:
   
   MyEC2Instance: 
     Type: AWS::EC2::Instance
